--- a/templates/task.html
+++ b/templates/task.html
@@ -1,7 +1,7 @@
 {{ template "_head.html" . }}
 
 <div class="timeline">
-    {{ range $key, $value := .Tasks }}
+    {{ if .Tasks }} {{ range $key, $value := .Tasks }}
         <div class="note" id="{{ $value.ID }}">
             <p class="noteHeading ">{{ $value.Title }}
             </p> <span class="toggle glyphicon glyphicon-resize-full"></span>
@@ -51,15 +51,18 @@
             </span>
         </div>
     {{ end }}
-<!-- this should be displayed when the tasks list is empty
-    <div class="note">
-        <p class="noteHeading">No Tasks here</p>
-        <p class="notefooter">Create new task
-            <button class="floating-action-icon-add" >
-                here </button>
-        </p>
-    </div>
--->
+
+
+<!--  this should be displayed when the tasks list is empty -->
+    {{ else }}
+        <div class="note">
+            <p class="noteHeading">No Tasks here</p>
+            <p class="notefooter">Create new task
+                <button class="floating-action-icon-add" >
+                    here </button>
+            </p>
+        </div>
+    {{ end }}
 </div>
 
 {{ template "_foot.html" . }}
